Ready for deployment Added postgres support Can not deploy atm because i am poor

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=datingapp.db"
+    "DefaultConnection": "Server=localhost; port=5432; User id=appuser; Password=Pa9569w0rd; Database=datingapp"
   },
   "TokenKey": "super secret unguessable key super secret unguessable key super secret unguessable key",
   "Logging": {
